# divvy-bike-map

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: deploy.yml
api/: Dockerfile  go.mod  go.sum
api/cmd/server/: main.go
api/internal/: config.go  config_test.go  database.go  database_test.go  divvy_client.go  http_handlers.go  http_handlers_test.go  inference.go  inference_test.go  server.go  station_service.go  station_service_test.go  testutils.go  types.go
api/migrations/: 001_initial_schema.sql  002_predictions_table.sql
api/static/: package-lock.json  package.json
api/static/js/: app.js  helpers.js
api/static/js/__tests__/: app.test.js  helpers.test.js
api/templates/: index.html  predictions.html  stations.html
ml-pipeline/: .dockerignore  Dockerfile  pyproject.toml  startup.sh
ml-pipeline/divvy_ml/: config.py  server.py
ml-pipeline/divvy_ml/pipelines/: feature_engineering.py  feature_selection.py  predictor.py  preprocessing.py  xgb_trainer.py
ml-pipeline/divvy_ml/utils/: database.py  model_loader.py  s3_client.py
ml-pipeline/tests/: conftest.py
ml-pipeline/tests/divvy_ml/pipelines/: test_feature_engineering.py  test_feature_selection.py  test_predictor.py  test_preprocessing.py  test_xgb_trainer.py
ml-pipeline/tests/divvy_ml/utils/: test_database.py  test_model_loader.py  test_s3_client.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: divvy-dashboard.json
scripts/: deploy.sh
